--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,16 @@ webcams with proper overlapped frustum. Correlate the same physical points on
 the two views that you get. The vision libraries such as OpenCV
 will give you aids. 
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-74257275-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
