--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,9 @@ Stereoscopic imaging is the simple way to sense 3D. It is
 same as the way brain senses 3D from our eyes. All the one you need is two
 webcams with proper overlapped frustum. Correlate the same physical points on
 the two views that you get. The vision libraries such as OpenCV
-will give you aids. 
+will give you aids.
+
+a lot more has to be added. 
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
