--- a/index.htm
+++ b/index.htm
@@ -9,19 +9,11 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<h1>How your program can read 3D?</h1>
 </head>
 <body>
-Veenus: Cool. How to get 3D points? It is a discussion about
-methods to scan 3D. 
-
-Stereoscopic imaging is the simple way to sense 3D. It is
-same as the way brain senses 3D from our eyes. All the one you need is two
-webcams with proper overlapped frustum. Correlate the same physical points on
-the two views that you get. The vision libraries such as OpenCV
-will give you aids.
-
-a lot more has to be added. 
+Except 3D, 
+all Ds are fiction…
+ 
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
