--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+  <!-- BEGIN - bootstrap css by twitter
+   placed in head for good typography. but it will slow down the site loading process 
+   -->
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -9,12 +12,17 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<!-- END - bootstrap css by twitter -->
 </head>
-<body>
-<p></p>Except 3D, 
-all Ds are fiction…
-</p> 
 
+<body>
+<p>
+   Except <strong>3D</strong>, 
+   all Ds are fiction!
+</p>
+<img src="images/1074vectors_logo.png" alt=""  />
+
+<!-- BEGIN Google analytics script -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -25,6 +33,7 @@ all Ds are fiction…
   ga('send', 'pageview');
 
 </script>
+<!-- END Google analytics script -->
 </body>
 
 </html>
