Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -20,8 +20,8 @@
    Except <strong>3D</strong>, 
    all Ds are fiction!
 </p>
-<img src="images/1074vectors_logo.png" alt=""  />
-
+<!-- <img src="images/1074vectors_logo.png" alt=""  /> 
+/>
 <!-- BEGIN Google analytics script -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
