--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,6 @@
 <html>
 
 <head>
-  <!-- BEGIN - bootstrap css by twitter
-   placed in head for good typography. but it will slow down the site loading process 
-   -->
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -12,28 +9,26 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<!-- END - bootstrap css by twitter -->
+<h1>How your program can read 3D?</h1>
 </head>
-
 <body>
-<p>
-   Except <strong>3D</strong>, 
-   all Ds are fiction!
-</p>
-<!-- <img src="images/1074vectors_logo.png" alt=""  /> 
-/>
-<!-- BEGIN Google analytics script -->
+Veenus: Cool. How to get 3D points? It is a discussion about
+methods to scan 3D. 
+
+Stereoscopic imaging is the simple way to sense 3D. It is
+same as the way brain senses 3D from our eyes. All the one you need is two
+webcams with proper overlapped frustum. Correlate the same physical points on
+the two views that you get. The vision libraries such as OpenCV
+will give you aids. 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-74257275-1', 'auto');
   ga('send', 'pageview');
-
 </script>
-<!-- END Google analytics script -->
 </body>
 
 </html>
