Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 <h1>How your program can read 3D?</h1>
 </head>
 <body>
-Veenus: Cool. How to get 3D points? It is a discussion about
+Veeenus: Cool. How to get 3D points? It is a discussion about
 methods to scan 3D. 
 
 Stereoscopic imaging is the simple way to sense 3D. It is
