--- a/index.htm
+++ b/index.htm
@@ -12,14 +12,10 @@
 <h1>How your program can read 3D?</h1>
 </head>
 <body>
-Veeenus: Cool. How to get 3D points? It is a discussion about
-methods to scan 3D. 
 
-Stereoscopic imaging is the simple way to sense 3D. It is
-same as the way brain senses 3D from our eyes. All the one you need is two
-webcams with proper overlapped frustum. Correlate the same physical points on
-the two views that you get. The vision libraries such as OpenCV
-will give you aids. 
+<img src="images/1074vectors_logo.png" alt=""  />
+ Except <strong>3D</strong>, 
+   all Ds are fiction!
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
