--- a/index.htm
+++ b/index.htm
@@ -9,14 +9,28 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<h1>How your program can read 3D?</h1>
 </head>
 <body>
 
 <img src="images/1074vectors_logo.png" alt=""  />
  Except <strong>3D</strong>, 
-   all Ds are fiction!
+   all Ds are fiction! <br>
 
+!!Theme images 3D!!! <br>
+3D programming make sense! When it deals with huge data, it’s interesting too. 1074 Vectors – The interactive 3D graphics expertize homes here. 
+<br>
+<h1>/ home </h1><br>
+We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.
+<br>
+From Da-Vinci days itself, architecting plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art. 
+<br>
+We do business because of passion in 3D graphics. See business link...
+<br>
+All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer’s intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
+<br>
+<h1>/ business </h1><br>
+All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer’s intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
+<br>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
