Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -18,8 +18,7 @@
 
 !!Theme images 3D!!! <br>
 3D programming make sense! When it deals with huge data, it’s interesting too. 1074 Vectors – The interactive 3D graphics expertize homes here. 
-<br>
-<h1>/ home </h1><br>
+<h1><br>/ home </h1><br>
 We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.
 <br>
 From Da-Vinci days itself, architecting plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art. 
