--- a/index.htm
+++ b/index.htm
@@ -11,13 +11,15 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
 <body>
-
-<img src="images/1074vectors_logo.png" alt=""  />
+<br>
+  <img src="images/1074vectors_logo.png" alt=""  />
+<br><br><br><br>
  Except <strong>3D</strong>, 
-   all Ds are fiction! <br>
-
-!!Theme images 3D!!! <br>
-3D programming make sense! When it deals with huge data, it’s interesting too. 1074 Vectors – The interactive 3D graphics expertize homes here. 
+   all <strong>D</strong>s are fiction! <br>
+<br><br>
+<br>
+<br>
+3D programming make sense! When it deals with huge data, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. 
 <br><br>
 <h1>/ home </h1><br>
 We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.
@@ -29,8 +31,70 @@ We do business because of passion in 3D graphics. See business link...
 All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer’s intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
 <br><br>
 <h1>/ business </h1><br>
-All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer’s intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
+<h2>/ engagement Models</h2><br>
+We do programing for behind the screen technologies of interactive computer graphics. More than coding, this include technology selection, architecting and after deployment support based on the queries/issues specific on platform considerations.
+<br><br> 
+We only work on outcome based contracts rather than time & material contracts. We start our engagement in two ways with a potential customer.
 <br><br>
+1.	Proposal <br><br>
+2.	Technical analysis report & estimate<br><br>
+<br><br>
+Proposals are unpaid. Depending on clarity of the solution and complexity of target hardware and input data, a proposal can have a ball park estimate both in terms of time and price. As our expertise is normally engaged, scheduling for a proposal takes time. So this unpaid method is apt for those who have time and R&D mindset. 
+<br><br>
+Technical Analysis report with estimation are paid engagements though its output is not fully charged. Analysis report will give whether the project is feasible or not. The functional specification stage which follows this, gives clarity on the features of the solution. We have a history of 86% success rate on estimate and technology selection. The rest had requirement revamping during the course of the time. Depending on the complexity, the price ranges from 3000 USD to 30,000 USD. Suggest industrialists to start with this engagement model as estimates are accurate compared to ballpark.
+<br><br>
+<h2>/ contact </h2> <br>
+e-mail id : yourBuddy@1074vectors.com  <br><br>
+phone & whatsapp : +1 123 456 789<br><br>
+1074vectors in google hangout and skype.<br><br>
+Kindly post your messages to start our discussion.<br><br>
+<h2>/ privacy</h2> <br>
+Privacy is very important for each one of us. Like that we honor other’s privacy too. 
+<br><br>
+Our privacy strategy is very systematic and secure which is matured. First of all our core engineering staff is perfectly knew each other for last 20+ years. The core team will not pass any information without declassification to mathematics or art team even if it is a necessity. The declassification process is strategically our trade secret. Though we cannot give much light on that, in brief it is based on term mangling. Hard cipher systems are too poor compared to secrecy handling of a human brain. We have a process and practices which is matured over years. But bonding between core members are our value.
+<br><br>
+Since the declassification not just a law point of view, the receivers cannot even identify the product that they have contributed after its full development. Surely it’s a protected by law too.
+<br><br>
+Sometimes it’s hard for us as a company too when it comes to showcasing us. But marketing of a quality first team is not just that needed. You know! 
+<br><br>
+Another business impact is the execution. We normally prefer to keep privacy with trusted team. Also to keep quality we need to stick with that then too our 68% projects were delivered on time. Surely our privacy policy not that economical to us as we are taking projects on turnkey basis.
+<br><br>
+<h2>/ availability</h2><br>
+Tentative schedule to take up activities can be arranged as follows. Helpful for your planning even before you contact us.
+<br><br>
+Discussions: any time.
+<br><br>
+Proposal & Ball Park estimate: 15 Mar 2015 (start)
+<br><br>
+Paid proposal/Technical Analysis & estimate: 10 Apr 2015 (start)
+<br><br>
+Load indicators: 
+12/15: 100%<br>
+01/16:  75%<br>
+02/16:  50%<br>
+03/16: 100%<br>
+04/16:  75%<br>
+05/16:  75%<br>
+06/16: 100%<br>
+07/06:  25%<br>
+<br><br>
+
+<h1>/ thoughts </h1><br>
+Professional 3D is not a single aspect. These thoughts will definitely give you a new dimension.
+<br><br>
+<h3>How your program can read 3D? </h3><br>
+It is a discussion about methods to scan 3D.
+<br>
+Stereoscopic imaging is the simple way to sense 3D. It is same as the way brain senses 3D from our eyes. All the one you need is two webcams with proper overlapped frustum. Correlate the same physical points on the two views that you get... <strong>read in full>></strong>
+<br><br>
+<h3>3D in memory </h3><br>
+Usually storing in memory is a challenge for professional 3D applications. What is the simple way is keep a set of points? Each with 3 position values. That is x,yand z. just a keep a list of points. It is the most natural way of memory representation.  
+<br><br>
+But this thumb rule is not actually always practical. Based on the nature of the data...<strong>read in full>></strong>
+<br><br>
+
+------
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
