Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -11,9 +11,11 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
 <body>
-<br>
-<img src="images/1074vectors_logo.png" alt=""  />
 
+<br>
+&nbsp&nbsp
+<img src="images/1074vectors_logo.png" alt="1074 Vectors logo"/>
+<br><br>
  Except <strong>3D</strong>, 
    all <strong>D</strong>s are fiction! <br>
 <br><br>
