Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -94,7 +94,32 @@ Usually storing in memory is a challenge for professional 3D applications. What 
 <br><br>
 But this thumb rule is not actually always practical. Based on the nature of the data...<strong>read in full>></strong>
 <br><br>
-
+<h3>Chalenges in surface/3D editing (UI) </h3><br>
+yet to publish>>
+<br><br>
+<h3>Handling the target GPU (generations of GPUs) </h3><br>
+yet to publish>>
+<br><br>
+<h3>How to be faster with Multi-GPU </h3><br>
+yet to publish>>
+<br><br>
+<h1>/ join </h1><br>
+We welcome challenge loving programmers to our fleet.
+<br><br>
+>Falling in love is a must! Yes... 3D love is our first criteria.
+<br><br>
+> Sense in 3D. With a white board or piece of paper, it's hard to communicate 3D with full sense. Only indications that we can draw or talk. Right? Yea.. then you got it.
+<br><br>
+> You may be good in JS or openGL ES. We agree that you are expert too. But in 1074 vectors, we love close-to-metal programming knowledge. We call it knowledge about system architecture, c programming knowledge, network stack knowledge, processor architecture or simply under-the-hood programmer knowledge!
+<br><br>
+>Be connected. How well is always good. We want you to learn seamlessly. Be abreast.
+<br><br>
+>Travel friendly...? good.. not just go and talk. But we want you to respect global cultures.
+<br><br>
+Last... but  very important: We <strong>trust</strong> you and you <strong>trust</strong> us. Reach business/privacy. That is our commitment. If you are ready for that professional life based on <strong>trust</strong>, you are eligible for joining us. even if you don't join us too... we respect you. :) 
+<br><br>
+Send your profile to <strong>yourBuddy@1074Vectors.com</strong>. Expecting the following non confidential details for the first interaction. though not limiting to. :) 
+<br><br>
 ------
 
 <script>
