Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -10,18 +10,28 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
-<body>
 
+<body style="background-color:lightgrey;">
 <br>
 &nbsp&nbsp
 <img src="images/1074vectors_logo.png" alt="1074 Vectors logo"/>
 <br><br>
+<h1 style="font-size:350%;">
  Except <strong>3D</strong>, 
    all <strong>D</strong>s are fiction! <br>
+<br>
+</h1>
+&nbsp&nbsp
+<img src="images/clayMouldingChild.jpg" alt="1074 Vectors logo"/>
 <br><br>
+<br><br>
+<h1 style="font-size:250%;">
+<strong>3D</strong> does not demand mathematics to communicate. 
+</h1>
 <br>
 <br>
-3D programming make sense! When it deals with huge data, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. 
+<br>
+3D programming make sense! When it deals with huge data, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an eithusiast, a collaborator or as a business man.
 <br><br>
 <h1>/ home </h1><br>
 We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.
