Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -11,12 +11,12 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color:lightgrey;">
+<body style="background-color:grey;color:orange" >
 <br>
 &nbsp&nbsp
 <img src="images/1074vectors_logo.png" alt="1074 Vectors logo"/>
 <br><br>
-<h1 style="font-size:350%;">
+<h1 style="font-size:350%;text-align:center;">
  Except <strong>3D</strong>, 
    all <strong>D</strong>s are fiction! <br>
 <br>
@@ -34,13 +34,13 @@
 3D programming make sense! When it deals with huge data, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an eithusiast, a collaborator or as a business man.
 <br><br>
 <h1>/ home </h1><br>
-We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.
+We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It's been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.
 <br><br>
 From Da-Vinci days itself, architecting plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art. 
 <br><br>
 We do business because of passion in 3D graphics. See business link...
 <br><br>
-All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer’s intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
+All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer's intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
 <br><br>
 <h1>/ business </h1><br>
 <h2>/ engagement Models</h2><br>
@@ -61,13 +61,13 @@ phone & whatsapp : +1 123 456 789<br><br>
 1074vectors in google hangout and skype.<br><br>
 Kindly post your messages to start our discussion.<br><br>
 <h2>/ privacy</h2> <br>
-Privacy is very important for each one of us. Like that we honor other’s privacy too. 
+Privacy is very important for each one of us. Like that we honor other's privacy too. 
 <br><br>
 Our privacy strategy is very systematic and secure which is matured. First of all our core engineering staff is perfectly knew each other for last 20+ years. The core team will not pass any information without declassification to mathematics or art team even if it is a necessity. The declassification process is strategically our trade secret. Though we cannot give much light on that, in brief it is based on term mangling. Hard cipher systems are too poor compared to secrecy handling of a human brain. We have a process and practices which is matured over years. But bonding between core members are our value.
 <br><br>
-Since the declassification not just a law point of view, the receivers cannot even identify the product that they have contributed after its full development. Surely it’s a protected by law too.
+Since the declassification not just a law point of view, the receivers cannot even identify the product that they have contributed after its full development. Surely it's a protected by law too.
 <br><br>
-Sometimes it’s hard for us as a company too when it comes to showcasing us. But marketing of a quality first team is not just that needed. You know! 
+Sometimes it's hard for us as a company too when it comes to showcasing us. But marketing of a quality first team is not just that needed. You know! 
 <br><br>
 Another business impact is the execution. We normally prefer to keep privacy with trusted team. Also to keep quality we need to stick with that then too our 68% projects were delivered on time. Surely our privacy policy not that economical to us as we are taking projects on turnkey basis.
 <br><br>
