Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -11,22 +11,21 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color:grey;color:orange" >
+<body style="background-color:black;color:orange" >
 <br>
 &nbsp&nbsp
 <img src="images/1074vectors_logo.png" alt="1074 Vectors logo"/>
 <br><br>
-<h1 style="font-size:350%;text-align:center;">
+<br><br>
+<h1 style="font-size:350%;">
  Except <strong>3D</strong>, 
-   all <strong>D</strong>s are fiction! <br>
+   all <strong>D</strong>s are fiction! 
 <br>
 </h1>
 &nbsp&nbsp
 <img src="images/clayMouldingChild.jpg" alt="1074 Vectors logo"/>
-<br><br>
-<br><br>
 <h1 style="font-size:250%;">
-<strong>3D</strong> does not demand mathematics to communicate. 
+<strong>3D</strong> does not demand <strong>mathematics</strong> to communicate. 
 </h1>
 <br>
 <br>
