--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@ We do business because of passion in 3D graphics. See business link...
 All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer's intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
 <br><br>
 <h1>/ business </h1><br>
-<h2>/ engagement Models</h2><br>
+<h3>/ engagement Models</h3><br>
 We do programing for behind the screen technologies of interactive computer graphics. More than coding, this include technology selection, architecting and after deployment support based on the queries/issues specific on platform considerations.
 <br><br> 
 We only work on outcome based contracts rather than time & material contracts. We start our engagement in two ways with a potential customer.
@@ -54,12 +54,12 @@ Proposals are unpaid. Depending on clarity of the solution and complexity of tar
 <br><br>
 Technical Analysis report with estimation are paid engagements though its output is not fully charged. Analysis report will give whether the project is feasible or not. The functional specification stage which follows this, gives clarity on the features of the solution. We have a history of 86% success rate on estimate and technology selection. The rest had requirement revamping during the course of the time. Depending on the complexity, the price ranges from 3000 USD to 30,000 USD. Suggest industrialists to start with this engagement model as estimates are accurate compared to ballpark.
 <br><br>
-<h2>/ contact </h2> <br>
+<h3>/ contact </h3> <br>
 e-mail id : yourBuddy@1074vectors.com  <br><br>
 phone & whatsapp : +1 123 456 789<br><br>
 1074vectors in google hangout and skype.<br><br>
 Kindly post your messages to start our discussion.<br><br>
-<h2>/ privacy</h2> <br>
+<h3>/ privacy</h3> <br>
 Privacy is very important for each one of us. Like that we honor other's privacy too. 
 <br><br>
 Our privacy strategy is very systematic and secure which is matured. First of all our core engineering staff is perfectly knew each other for last 20+ years. The core team will not pass any information without declassification to mathematics or art team even if it is a necessity. The declassification process is strategically our trade secret. Though we cannot give much light on that, in brief it is based on term mangling. Hard cipher systems are too poor compared to secrecy handling of a human brain. We have a process and practices which is matured over years. But bonding between core members are our value.
@@ -70,7 +70,7 @@ Sometimes it's hard for us as a company too when it comes to showcasing us. But 
 <br><br>
 Another business impact is the execution. We normally prefer to keep privacy with trusted team. Also to keep quality we need to stick with that then too our 68% projects were delivered on time. Surely our privacy policy not that economical to us as we are taking projects on turnkey basis.
 <br><br>
-<h2>/ availability</h2><br>
+<h3>/ availability</h3><br>
 Tentative schedule to take up activities can be arranged as follows. Helpful for your planning even before you contact us.
 <br><br>
 Discussions: any time.
@@ -96,7 +96,8 @@ Professional 3D is not a single aspect. These thoughts will definitely give you 
 <h3>How your program can read 3D? </h3><br>
 It is a discussion about methods to scan 3D.
 <br>
-Stereoscopic imaging is the simple way to sense 3D. It is same as the way brain senses 3D from our eyes. All the one you need is two webcams with proper overlapped frustum. Correlate the same physical points on the two views that you get... <strong>read in full>></strong>
+Stereoscopic imaging is the simple way to sense 3D. It is same as the way brain senses 3D from our eyes. All the one you need is two webcams with proper overlapped frustum. Correlate the same physical points on the two views that you get... 
+<a href="1074 Vectors How to get 3D points.htm">Read in full >></a>
 <br><br>
 <h3>3D in memory </h3><br>
 Usually storing in memory is a challenge for professional 3D applications. What is the simple way is keep a set of points? Each with 3 position values. That is x,yand z. just a keep a list of points. It is the most natural way of memory representation.  
