--- a/index.htm
+++ b/index.htm
@@ -97,7 +97,7 @@ Professional 3D is not a single aspect. These thoughts will definitely give you 
 It is a discussion about methods to scan 3D.
 <br>
 Stereoscopic imaging is the simple way to sense 3D. It is same as the way brain senses 3D from our eyes. All the one you need is two webcams with proper overlapped frustum. Correlate the same physical points on the two views that you get... 
-<a href="1074 Vectors How to get 3D points.htm">Read in full >></a>
+<a href="1074.Vectors.How.to.get.3D.points.htm">Read in full >></a>
 <br><br>
 <h3>3D in memory </h3><br>
 Usually storing in memory is a challenge for professional 3D applications. What is the simple way is keep a set of points? Each with 3 position values. That is x,yand z. just a keep a list of points. It is the most natural way of memory representation.  
