Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -102,7 +102,8 @@ Stereoscopic imaging is the simple way to sense 3D. It is same as the way brain 
 <h3>3D in memory </h3><br>
 Usually storing in memory is a challenge for professional 3D applications. What is the simple way is keep a set of points? Each with 3 position values. That is x,yand z. just a keep a list of points. It is the most natural way of memory representation.  
 <br><br>
-But this thumb rule is not actually always practical. Based on the nature of the data...<strong>read in full>></strong>
+But this thumb rule is not actually always practical. Based on the nature of the data...
+<a href="1074.Vectors.3D.in.memory.htm">Read in full >></a>
 <br><br>
 <h3>Chalenges in surface/3D editing (UI) </h3><br>
 yet to publish>>
