Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -79,7 +79,7 @@ Proposal & Ball Park estimate: 15 Mar 2015 (start)
 <br><br>
 Paid proposal/Technical Analysis & estimate: 10 Apr 2015 (start)
 <br><br>
-Load indicators: 
+Load indicators: <br>
 12/15: 100%<br>
 01/16:  75%<br>
 02/16:  50%<br>
