Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 <body style="background-color:black;color:orange" >
 <br>
 &nbsp&nbsp
-<img src="images/1074vectors_logo.png" alt="1074 Vectors logo" style="width:800px;"/>
+<img src="images/1074vectors_logo.png" alt="1074 Vectors logo"  width="800" />
 <br><br>
 <br><br>
 <h1 style="font-size:350%;">
