Thought on MultiGPU

--- a/index.htm
+++ b/index.htm
@@ -112,7 +112,8 @@ yet to publish>>
 yet to publish>>
 <br><br>
 <h3>How to be faster with Multi-GPU </h3><br>
-yet to publish>>
+In the terminologies of the 90’s, there is a classic term calld co-processor who assist the cpu for certain specialized jobs. GPUs are co-processors in that definition. But in 2016, GPUs far more than just assistants. It is powerful than CPUs.  It is true for both ends: an entry level PC with a discrete graphics card to a professional graphics workstation. In all cases it gives more FLOPS (floating point operations per second) for each $ you pay.
+<a href="1074.Vectors.Supporting.MultiGPU.htm">Read in full >></a>
 <br><br>
 <h1>/ join </h1><br>
 We welcome challenge loving programmers to our fleet.
