--- a/1074.Vectors.3D.in.memory.htm
+++ b/1074.Vectors.3D.in.memory.htm
@@ -14,7 +14,7 @@
 <body style="background-color:black;color:orange" >
 <br>
 &nbsp&nbsp
-<img src="images/1074vectors_logo.png" alt="1074 Vectors logo"/>
+<img src="images/1074vectors_logo.png" alt="1074 Vectors logo" width="800"/>
 <br><br>
 <br><br>
 
