Join part updated

--- a/index.htm
+++ b/index.htm
@@ -128,10 +128,26 @@ We welcome challenge loving programmers to our fleet.
 <br><br>
 >Travel friendly...? good.. not just go and talk. But we want you to respect global cultures.
 <br><br>
-Last... but  very important: We <strong>trust</strong> you and you <strong>trust</strong> us. Reach business/privacy. That is our commitment. If you are ready for that professional life based on <strong>trust</strong>, you are eligible for joining us. even if you don't join us too... we respect you. :) 
+Last... but  very important: We <strong>trust</strong> you and you <strong>trust</strong> us. Please have a look at business/privacy in the web page. That is our commitment to the world. If you are ready for that professional life based on <strong>trust</strong>, you are eligible for joining us. Even if you don't join us too... we respect you. :) 
 <br><br>
-Send your profile to <strong>yourBuddy@1074Vectors.com</strong>. Expecting the following non confidential details for the first interaction. though not limiting to. :) 
+Send your profile to <strong>yourBuddy@1074Vectors.com</strong>. Expecting the following non-confidential details for the first interaction. though this is not a limitation!. :)
 <br><br>
+<strong>
+Name </strong> (with salutatoin as per your preference) <br>
+<strong>
+Locality </strong>  <br>
+<strong>
+Why 1074vectors ? </strong> (just think aloud! brief why you are interested!) <br>
+<strong>
+University certifications </strong> (with university name and link) <br>
+<strong>
+Industry/Biz certifications </strong> (with links and year) <br>
+<strong>
+Workshops/Tradeshows </strong> (you have presented/active/demoed links and year) <br>
+<strong>
+Online </strong> (blogs, forums etc) <br>
+<strong>
+Code of Ethics </strong> (may be yours or the list that you like anything!) <br>
 ------
 
 <script>
