--- a/index.htm
+++ b/index.htm
@@ -105,8 +105,9 @@ Usually storing in memory is a challenge for professional 3D applications. What 
 But this thumb rule is not actually always practical. Based on the nature of the data...
 <a href="1074.Vectors.3D.in.memory.htm">Read in full >></a>
 <br><br>
-<h3>Chalenges in surface/3D editing (UI) </h3><br>
-yet to publish>>
+<h3>Chalenges in 3D editing </h3><br>
+It was always been difficult to interact with 3D models on a computer screen as it is just a 2D space and the sense of depth is provided using the perspective display method. One can easily understand the movement of an object in the 2 directions aligned with the sides of the screen; be it of the mouse pointer or any 3D object. But there is no way for the user to identify the movements in the 3rd dimension, which is normally inward and outward of the screen.
+<a href="1074.Vectors.Challenges.In.3D.Editing.htm">Read in full >></a>
 <br><br>
 <h3>Handling the target GPU (generations of GPUs) </h3><br>
 yet to publish>>
