--- a/1074.Vectors.3D.in.memory.htm
+++ b/1074.Vectors.3D.in.memory.htm
@@ -11,7 +11,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color:black;color:orange" >
+<body style="background-color:black;color:orange;margin:10px;" >
 <br>
 &nbsp&nbsp
 <img src="images/1074vectors_logo.png" alt="1074 Vectors logo" width="800"/>
