Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -110,7 +110,7 @@ It was always been difficult to interact with 3D models on a computer screen as 
 <a href="1074.Vectors.Challenges.In.3D.Editing.htm">Read in full >></a>
 <br><br>
 <h3>Choice of 3D Programming APIs </h3><br>
-There are only a few options when it comes to programming in 3D. While Microsoft is promoting DirectX and Apple promoting Metal, there is a huge fan base for Open GL too which is an open specification driven by the Khronos group. Of course, the popularity of Open GL is because of its cross-platform support. While the DirectX 
+There are only a few options when it comes to programming in 3D. While Microsoft is promoting DirectX and Apple promoting Metal, there is a huge fan base for Open GL too which is an open specification driven by the Khronos group. Of course, the popularity of Open GL is because of its cross-platform support. While the DirectX... 
 <a href="1074.Vectors.3D.Programming.APIs.htm">Read in full >></a>
 <br><br>
 <h3>Handling the target GPU (generations of GPUs) </h3><br>
