Added files via upload

--- a/index_boban.htm
+++ b/index_boban.htm
@@ -1,7 +1,7 @@
 <?php
-include_once("includes/gzip.php");
-include_once("includes/settings.php");
-include_once("includes/encryption.php");
+include_once("includes/gzip.htm");
+include_once("includes/settings.htm");
+include_once("includes/encryption.htm");
 ?>
 <!DOCTYPE html>
 <html lang="en">
@@ -136,7 +136,56 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
     </script>
     </head>
     <body id="top">
-    <?php include("header.php");?>
+<!--    <?php include("header.htm");?> -->
+
+<!-- HEADER.HTM BEGIN --> 
+
+<!-- start preloader -->
+
+<div class="preloader">
+  <div class="sk-spinner sk-spinner-wave">
+    <div class="sk-rect1"></div>
+    <div class="sk-rect2"></div>
+    <div class="sk-rect3"></div>
+    <div class="sk-rect4"></div>
+    <div class="sk-rect5"></div>
+  </div>
+</div>
+<!-- end preloader --> 
+<!-- start navigation -->
+<section id="navbar">
+  <nav class="navbar templatemo-nav " role="navigation" >
+    <div class="container" >
+      <div class="navbar-header"><div id="logo"><a href="index.php" class="wow fadeInLeft"><img src="images/logo.png" height="70px" width="70px;" ></a></div> <div class="resmenu"><a id="resp-menu" class="responsive-menu" href="#">
+   Menu</a></div>
+        <ul class="menu wow fadeInUp" >
+          <li><a  href="3d.php" >
+            <div class="menulink"> 3D</div>
+            <div class="menusep"></div>
+            </a></li>
+          <li><a  href="about.php">
+            <div class="menulink">Profile</div>
+            </a></li>
+          <li id="logomenu"><a href="index.php" class="wow fadeInLeft"><img src="images/logo.png" ></a></li>
+          <li><a  href="thoughts.php">
+            <div class="menulink">Thoughts</div>
+            </a></li>
+          <li><a  href="contact.php">
+            <div class="menusep"></div>
+            <div class="menulink">Contact</div>
+            </a> </li>
+        </ul>
+      </div>
+    </div>
+    </div>
+  </nav>
+</section>
+<!-- end navigation --> 
+
+<!-- start home --> 
+
+<!-- HEADER.HTM END --> 
+
     <!-- end navigation -->
     <section id="banner">
       <div class="banner wow fadeInLeft" style="position: relative; margin: 0 auto;
@@ -227,29 +276,29 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
           </div>
         </div>
         <div class="row details">
-          <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.php">
+          <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag1.png" style="border:none;"></a></div>
             <div class="articlename">
               <h4>Article Name</h4>
             </div>
             <div class="desc"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
-            <div class="more"><a href="thoughts.php"><img src="images/arow.png"></a></div>
+            <div class="more"><a href="thoughts.htm"><img src="images/arow.png"></a></div>
           </div>
-          <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.php">
+          <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag2.png" style="border:none;"></a></div>
             <div class="articlename">
               <h4>Article Name</h4>
             </div>
             <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-            <div class="more"><a href="thoughts.php"><img src="images/arow.png"></a></div>
+            <div class="more"><a href="thoughts.htm"><img src="images/arow.png"></a></div>
           </div>
-          <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.php">
+          <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag3.png" style="border:none;"></a></div>
             <div class="articlename">
               <h4>Article Name</h4>
             </div>
             <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-            <div class="more"><a href="thoughts.php"><img src="images/arow.png"></a></div>
+            <div class="more"><a href="thoughts.htm"><img src="images/arow.png"></a></div>
           </div>
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.php">
             <div class="img"><img src="images/imag4.png" style="border:none;"></a></div>
