Added files via upload

--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
 &nbsp&nbsp
 <img src="images/clayMouldingChild.jpg" alt="1074 Vectors logo"/>
 <h1 style="font-size:250%;">
-<strong>3D</strong> does not demand <strong>mathematics</strong> to communicate. 
+<strong>3D</strong> does not demand <strong>mathematics</strong> to communicate. l
 </h1>
 <br>
 <br>
@@ -42,18 +42,20 @@ We do business because of passion in 3D graphics. See business link...
 All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer's intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
 <br><br>
 <h1>/ business </h1><br>
-<h3>/ engagement Models</h3><br>
-We do programing for behind the screen technologies of interactive computer graphics. More than coding, this include technology selection, architecting and after deployment support based on the queries/issues specific on platform considerations.
-<br><br> 
-We only work on outcome based contracts rather than time & material contracts. We start our engagement in two ways with a potential customer.
-<br><br>
-1.	Proposal <br><br>
-2.	Technical analysis report & estimate<br><br>
-<br><br>
-Proposals are unpaid. Depending on clarity of the solution and complexity of target hardware and input data, a proposal can have a ball park estimate both in terms of time and price. As our expertise is normally engaged, scheduling for a proposal takes time. So this unpaid method is apt for those who have time and R&D mindset. 
-<br><br>
-Technical Analysis report with estimation are paid engagements though its output is not fully charged. Analysis report will give whether the project is feasible or not. The functional specification stage which follows this, gives clarity on the features of the solution. We have a history of 86% success rate on estimate and technology selection. The rest had requirement revamping during the course of the time. Depending on the complexity, the price ranges from 3000 USD to 30,000 USD. Suggest industrialists to start with this engagement model as estimates are accurate compared to ballpark.
-<br><br>
+<h3>/ engagement models</h3><br>
+<p>
+We do programming. Specializes in “behind the screen technologies” of interactive graphics. More than coding, our job includes technology selection, architecting and technical support after deployment. Normally the technical support is done against queries specific to certain hardware platforms (eg:- GPU). 
+</p> <p>
+Software development around the globe is not that easy. Especially when it comes to 3D. Our ‘e’ medias are still a lot of grow to communicate subjects around 3D. At this scenario, it’s not that easy to start an engagement in a win-win model. 
+</p> <p>
+We value our time and clients too. We value money budgeted for the project. So we do ‘outcome’ based model of business (a.k.a turnkey contracts). There is no man power discussions as we value the result than charging man-hours. However still… to start a development it is very unclear to arrive to an estimate at the starting point.  
+</p> <p>
+So two methods are generally adopted to START. One is unpaid the other is marginally charged.</p> <p>
+1.	Proposal  (unpaid)</p> <p>
+2.	Technical analysis report & estimate</p> <p>
+Proposals: Proposals are executed for a first level review of the requirements in a technology context. Obviously it will propose a solution in a document. It will have technology details and rough understanding of the requirements. It can have a ball park estimate. It depends on the clarity of the solution, the complexity of targeted hardware and known varieties of input data. As our experts are normally engaged, scheduling for a proposal may take time. So this unpaid method is apt for those who have time to plan for a time-to-market. </p> <p>
+Technical Analysis report with estimation: A document is delivered. It contains a proposed solution with refined requirements, Technology selection, project schedule and a price estimates. Project will have a FS stage (functional specification stage) after this. The FS stage gives clarity on the features of the solution. But Technical analysis report is made after testing the potentially risky areas. Though the features are not fully formed, normally we can expect a success rate We have a history of 86% success rate on estimate and technology selection. The rest had requirement revamping during the course of the time. Depending on the complexity, the price ranges from 3000 USD to 30,000 USD. Suggest industrialists to start with this engagement model as estimates are accurate than a mere ballpark. This will help in proper budgeting which may again need to plan cash-flow. Though this is a paid method, the value of the report is not fully charged as we are also considering things in a start-up mindset. After all the success of this report is start of a wonderful industrial product. </p> 
+
 <h3>/ contact </h3> <br>
 e-mail id : yourBuddy@1074vectors.com  <br><br>
 phone & whatsapp : +1 123 456 789<br><br>
