--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 <br><br>
 <h1 style="font-size:350%;">
  Except <strong>3D</strong>, 
-   all <strong>D</strong>s are fiction! 
+   all <strong>D</strong>s are fictions! 
 <br>
 </h1>
 &nbsp&nbsp
@@ -30,17 +30,16 @@
 <br>
 <br>
 <br>
-3D programming make sense! When it deals with huge data, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an eithusiast, a collaborator or as a business man.
-<br><br>
-<h1>/ home </h1><br>
-We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It's been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.
-<br><br>
-From Da-Vinci days itself, architecting plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art. 
-<br><br>
-We do business because of passion in 3D graphics. See business link...
-<br><br>
-All companies have weak part in their SWOT charts. Our point to mention is schedule constraints. We have strict privacy handling strategy to protect our customer's intellectual interests. The side effect is we heavily depend on the people we have. So book your engagement period before hand. But always feel free to talk… we are happy to hear you. 
-<br><br>
+<p>3D programming makes sense! When it deals with huge data visualization, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an enthusiast, a collaborator or as a product owner. 3D rendered screens will be the natural way to provide information from the data that you have!. 
+</p>
+<h1>/ home </h1>
+<p>We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It's been challenging to keep quality of 3D with accuracy and performance. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.</p>
+<p>We love the evolution of interactive 3D graphics. 3D programming always had a glorious/fancy part and an precise engineering part. It's been challenging to keep quality of 3D with accuracy and performance. How to reduce repeated computing? Simple! Store. It’s a balance. Memory vs computing for performance. This old theory getting a couple of possibilities nowadays. It mixes with the distributed nature and low-capacity of the new generation head-end devices, it can be again challenging. Since battery involved, quality/watt, quality/degree Celsius etc kind of metrics also evolved. Also the computing can be split in cloud enabled internet/intranet for a FLOPS/$. So running cost is another metrics. Altogether a good engineering solution is not one aspect of tuning up. </p>
+<p>Much about engineering aspects! Engineering always serves the purpose well, any artistic rendering will be neglected. Without a good combination of colors and effects a good software will not please/impress her users. From Da-Vinci days itself, <strong>architecting</strong> plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art. </p>
+<p>We love to deliver the artistic aspects excellently while our engineers do the best under the hood. We do architect not just engineer.</p>
+<p>To know more about doing a business taking support from us, see our /business link.</p>
+<p><strong>Important Note:-</strong></p> 
+<p>All companies have a weak part to point out in their SWOT charts. Ours is constraints on schedule vs availability of good man-power. Yes. It’s a point to mention as it connects with schedule constraints. At the same time, it is directly connected with our strongest points: QoS and Privacy handling. We have strict privacy handling strategy to protect our customer’s intellectual interests. As very well known, only good quality people can keep privacy intact. The side effect is we heavily depend on the core people we have. So book your engagement period beforehand. But always feel free to talk… we are happy to hear you. </p>
 <h1>/ business </h1><br>
 <h3>/ engagement models</h3><br>
 <p>
@@ -50,7 +49,7 @@ Software development around the globe is not that easy. Especially when it comes
 </p> <p>
 We value our time and clients too. We value money budgeted for the project. So we do ‘outcome’ based model of business (a.k.a turnkey contracts). There is no man power discussions as we value the result than charging man-hours. However still… to start a development it is very unclear to arrive to an estimate at the starting point.  
 </p> <p>
-So two methods are generally adopted to START. One is unpaid the other is marginally charged.</p> <p>
+So two methods are generally adopted to START. One is unpaid; the other is marginally charged.</p> <p>
 1.	Proposal  (unpaid)</p> <p>
 2.	Technical analysis report & estimate</p> <p>
 Proposals: Proposals are executed for a first level review of the requirements in a technology context. Obviously it will propose a solution in a document. It will have technology details and rough understanding of the requirements. It can have a ball park estimate. It depends on the clarity of the solution, the complexity of targeted hardware and known varieties of input data. As our experts are normally engaged, scheduling for a proposal may take time. So this unpaid method is apt for those who have time to plan for a time-to-market. </p> <p>
