typo in /home. corrected

--- a/index.htm
+++ b/index.htm
@@ -33,8 +33,7 @@
 <p>3D programming makes sense! When it deals with huge data visualization, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an enthusiast, a collaborator or as a product owner. 3D rendered screens will be the natural way to provide information from the data that you have!. 
 </p>
 <h1>/ home </h1>
-<p>We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It's been challenging to keep quality of 3D with accuracy and performance. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.</p>
-<p>We love the evolution of interactive 3D graphics. 3D programming always had a glorious/fancy part and an precise engineering part. It's been challenging to keep quality of 3D with accuracy and performance. How to reduce repeated computing? Simple! Store. It’s a balance. Memory vs computing for performance. This old theory getting a couple of possibilities nowadays. It mixes with the distributed nature and low-capacity of the new generation head-end devices, it can be again challenging. Since battery involved, quality/watt, quality/degree Celsius etc kind of metrics also evolved. Also the computing can be split in cloud enabled internet/intranet for a FLOPS/$. So running cost is another metrics. Altogether a good engineering solution is not one aspect of tuning up. </p>
+We love the evolution of interactive 3D graphics. 3D programming always had a glorious/fancy part and an precise engineering part. It's been challenging to keep quality of 3D with accuracy and performance. How to reduce repeated computing? Simple! Store. It’s a balance. Memory vs computing for performance. This old theory getting a couple of possibilities nowadays. It mixes with the distributed nature and low-capacity of the new generation head-end devices, it can be again challenging. Since battery involved, quality/watt, quality/degree Celsius etc kind of metrics also evolved. Also the computing can be split in cloud enabled internet/intranet for a FLOPS/$. So running cost is another metrics. Altogether a good engineering solution is not one aspect of tuning up. </p>
 <p>Much about engineering aspects! Engineering always serves the purpose well, any artistic rendering will be neglected. Without a good combination of colors and effects a good software will not please/impress her users. From Da-Vinci days itself, <strong>architecting</strong> plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art. </p>
 <p>We love to deliver the artistic aspects excellently while our engineers do the best under the hood. We do architect not just engineer.</p>
 <p>To know more about doing a business taking support from us, see our /business link.</p>
@@ -57,7 +56,7 @@ Technical Analysis report with estimation: A document is delivered. It contains 
 
 <h3>/ contact </h3> <br>
 e-mail id : yourBuddy@1074vectors.com  <br><br>
-phone & whatsapp : +1 123 456 789<br><br>
+phone & whatsapp : +91 98 460 10 223 <br><br>
 1074vectors in google hangout and skype.<br><br>
 Kindly post your messages to start our discussion.<br><br>
 <h3>/ privacy</h3> <br>
